# chat-gpt-desktop-util

./: Cargo.toml  Dockerfile
src/: chat.rs  config.rs  gui.rs  main.rs  utils.rs
src/app/: app.rs  config.rs
