[package]
name = "chat-gpt-desktop-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_10"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
dotenv = "0.15.0"

[profile.dev]
windows_subsystem = "windows"

[profile.release]
windows_subsystem = "windows"
